añadimos el BONUS

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: aarcos <aarcos@student.42.fr>              +#+  +:+       +#+         #
+#    By: ari <ari@student.42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/11 00:53:56 by aarcos            #+#    #+#              #
-#    Updated: 2024/10/16 00:33:26 by aarcos           ###   ########.fr        #
+#    Updated: 2024/11/05 02:04:08 by ari              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -52,16 +52,25 @@ SRCS =	ft_isalpha.c \
 		ft_putendl_fd.c \
 		ft_putnbr_fd.c \
 		ft_putstr_fd.c \
+		ft_lstnew_BONUS.c \
+		ft_lstadd_front_BONUS.c \
+		ft_lstsize_BONUS. \
+		ft_lstlast_BONUS.c \
+		ft_lstadd_back_BONUS.c \
+		ft_lstdelone_BONUS.c \
+		ft_lstclear_BONUS.c \
+		ft_lstiter_BONUS.c \
+		ft_lstmap_BONUS.c \
 		
 OBJS = $(SRCS:.c=.o)
-#BOBJS = $(BSRC:.c=.o)
+BOBJS = $(BSRC:.c=.o)
 RM = rm -f
 
 # RULES
 
 all: $(NAME)
 
-$(NAME): $(OBJS) # $(BOBJS)
+$(NAME): $(OBJS)  $(BOBJS)
 	$(AR) $(ARFLAGS) -o $(NAME) $(OBJS) $(BOBJS) 
 
 %.o: %.c
@@ -75,8 +84,8 @@ fclean: clean
 
 re: fclean all
 
-# bonus: $(OBJS) archivo_bonus.o
-#     $(CC) $(CFLAGS) -o $(NAME) $(OBJS) archivo_bonus.o
+ bonus: $(OBJS) archivo_bonus.o
+     $(CC) $(CFLAGS) -o $(NAME) $(OBJS) archivo_bonus.o
 
 
 .PHONY: all clean fclean re bonus
